--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
 							bodyContracts.append(lineContent);
 						});
 						var contractsMsg = $("#contractsMsg");
-						contractsMsg.text("Contracts found!");
+						contractsMsg.text("Contact contracts found!");
 						var isMessageGetContracts = $("#isMessageGetContracts");
 						isMessageGetContracts.show();
 						$('#buttonGetContracts').prop('disabled', true);
@@ -425,7 +425,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>© Copyright 2020 legarantmobile.herokuapp.com. All Rights Reserved.</p>
+        <p>© Copyright 2020 legarantmobile. All Rights Reserved.</p>
         <p>a VO Frédéric Production</p>
     </div>
 </body>
