--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
             <form id="getInformationForm" action="/getContactInfo" method="post">
                 <img src="img/logo.PNG">
                 <br></br>
-                <h3 class="title">Access contact information</h3>
+                <h3 class="title">update Access contact information</h3>
                     <div class="input-div one">
                         <div class="i">
                             <i class="fas fa-user"></i>
